# ElectionForecasting

./: .gitignore  README.md  national_forecast_A.csv  national_forecast_B.csv  national_forecast_C.csv  national_forecast_D.csv  national_forecast_E.csv  provincial_forecast_A.csv  provincial_forecast_B.csv  provincial_forecast_C.csv  provincial_forecast_D.csv  provincial_forecast_E.csv  pyproject.toml  requirements.txt
ElectionForecasting/configuration_files/: alternative_poll_weightings.json  poll_weightings.json
ElectionForecasting/data/: combine_scenarios_data.py
ElectionForecasting/plots/static_plots/: correlation_matrix.html
ElectionForecasting/previous_git_states/: DatalandElectionModel.txt
ElectionForecasting/src/: config.py  main.py  root.py
ElectionForecasting/src/data/: data_ingestion.py  data_transformation.py
ElectionForecasting/src/modelling/: DataLoader.py  DatalandElectionModel.py  Driver.py
ElectionForecasting/src/utils/: backtesting_utilities.py  election_results.py  general.py  plotting_utils.py
ElectionForecasting/src/validation/: log_likelihood_scores.py  log_loss.py  model_inference.py
ElectionForecasting/src/visualisations/: animation_utils.py  electoral_animation.py  electoral_map.py  plot_correlations.py  scatter_plots.py
notebooks/: calculate_poll_weights.py  correlation_analysis.ipynb  evaluation_of_timeseries_forcasting.ipynb  model_comparison.ipynb  model_development.ipynb  model_evaluation.ipynb  posterior_predictive_checks.ipynb  prior_estimates.ipynb  time_series_forcasting.ipynb
(+21 files in other folders)
